added new files

--- a/s8DIP/Merge Image.ipynb
+++ b/s8DIP/Merge Image.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "be0a14b9-0c6b-4722-bf09-cbd3f6aab378",
+   "metadata": {},
+   "source": [
+    "https://docs.opencv.org/3.4/d5/dc4/tutorial_adding_images.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "e7741c6f-c0e4-4566-b1cd-54eb715bca78",
@@ -196,8 +204,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "id": "079d5ce1-4dbc-4a7a-8924-b1f0411aa5ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imgmerge(img1,img2):\n",
+    "    h1,w1=img1.shape[:2]\n",
+    "    h2,w2=img2.shape[:2]\n",
+    "    if(h1!=h2 and w1!=w2):\n",
+    "        h=min(h1,h2)\n",
+    "        w=min(w1,w2)\n",
+    "        img1=cv2.resize(img1,(w,h))\n",
+    "        img2=cv2.resize(img2,(w,h))\n",
+    "    alpha=0.5\n",
+    "    beta = (1.0 - alpha)\n",
+    "    dst=cv2.addWeighted(img1,alpha,img2,beta,0.0)\n",
+    "    cv2.imshow(\"image\",dst)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "8f3df175-4c2f-4e5c-97f8-94eee2d7d205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgmerge(cat,catword)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0489b7-f589-4926-96ac-d34f6b1acab2",
    "metadata": {},
    "outputs": [],
    "source": []
