--- a/imageconcatenation.ipynb
+++ b/imageconcatenation.ipynb
@@ -288,7 +288,16 @@
    "id": "a779c4ff-81aa-4861-a9cf-542a5295fd23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def imgconcatanenation(img1,img2):\n",
+    "    h1,w1=img1.shape[:2]\n",
+    "    h2,w2=img2.shape[:2]\n",
+    "    if(h1!=h2 and w1!=w2):\n",
+    "        h=min(h1,h2)\n",
+    "        w=min(w1,w2)\n",
+    "    img1=cv2.resize(img1,(w,h))\n",
+    "    img2=cv2.resize(img2,(w,h))"
+   ]
   }
  ],
  "metadata": {
